[package]
name = "douki"
version = "0.0.1"
authors = ["Alkouille"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
cynic = { version = "0.13.0", features = ["surf"] }
oauth2 = "3.0.0"
surf = "2.0.0"
url = "2.2.1"